Fix for WMS:3551 Sales Dashboard template UI overlaps on dialogues

--- a/src/main/webapp/styles/less/wm-widgets.less
+++ b/src/main/webapp/styles/less/wm-widgets.less
@@ -303,7 +303,10 @@ html, body {
         }
     }
 }
-
+/* popover class makes widget overlap dialog */
+.wm-app .popover {
+  z-index: 1030 !important;
+}
 .app-tree {
   position: relative;
   .user-select-none();
